--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,94 @@
+/* SETTINGS ------------------------------------- */
+
+:root {
+  --white: #f1f2f3;
+  --primary: #070709;
+  --secondary: #0a0b0f;
+  --border: #1f222e;
+
+  --width: 30vw;
+  --height: 90vh;
+}
+
 #root {
   margin: 0;
+
+  background-color: var(--primary);
+
+  min-height: 100vh;
+
+  display: flex;
+  padding: 0 8vw;
+}
+html,
+body {
+  margin: 0;
   padding: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+/* LAYOUT ------------------------------------- */
+
+.content {
+  flex: 1 0 auto;
+  height: 200vh; /* temporary */
+  margin-right: var(--width);
+}
+
+.profileCardNavBarWrapper {
+  right: 8vw;
+  width: var(--width);
+
+  height: 100vh;
+  position: fixed;
+
+  display: flex;
+  padding-left: 20px;
+  align-items: center;
+}
+.profileCardNavBar {
+  width: 100%;
+  height: var(--height);
+
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.profileCard {
+  flex: 1 0 auto;
+}
+.navBar {
+  padding: 10px 10px;
+  height: 70px;
+}
+.overview {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr 0.4fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+
+  height: 90vh;
+  margin: 5vh 0;
+}
+
+.overvieTimeline {
+  grid-area: 1 / 1 / 2 / 2;
+}
+.overviewProjects {
+  grid-area: 1 / 2 / 2 / 3;
+}
+.overviewWorkflow {
+  grid-area: 2 / 1 / 3 / 3;
+}
+
+/* STYLING ------------------------------------- */
+
+.box {
+  border-radius: 12px;
+  border: 1px var(--border) solid;
+  background-color: var(--secondary);
 }
