--- a/src/App.css
+++ b/src/App.css
@@ -65,24 +65,38 @@ body {
   height: 70px;
 }
 .overview {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  flex-direction: column;
+  /* grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 1fr 0.4fr;
   grid-column-gap: 20px;
-  grid-row-gap: 20px;
+  grid-row-gap: 20px; */
 
-  height: 90vh;
+  height: var(--height);
   margin: 5vh 0;
+}
+.overviewTopWrapper {
+  display: flex;
+  gap: 20px;
+  flex: 1 0 auto;
+  margin-bottom: 20px;
+  border: solid blue thin;
 }
 
 .overvieTimeline {
-  grid-area: 1 / 1 / 2 / 2;
+  /* grid-area: 1 / 1 / 2 / 2; */
+  flex: 1 0 auto;
+  border: solid red thin;
 }
 .overviewProjects {
-  grid-area: 1 / 2 / 2 / 3;
+  /* grid-area: 1 / 2 / 2 / 3; */
+  flex: 1 0 auto;
+  border: solid purple thin;
 }
 .overviewWorkflow {
-  grid-area: 2 / 1 / 3 / 3;
+  /* grid-area: 2 / 1 / 3 / 3; */
+
+  height: 170px;
 }
 
 /* STYLING ------------------------------------- */
@@ -91,4 +105,30 @@ body {
   border-radius: 12px;
   border: 1px var(--border) solid;
   background-color: var(--secondary);
+}
+
+/* RESPONSIVENESS ------------------------------------- */
+
+@media only screen and (max-width: 1024px) {
+  .navBar {
+    position: fixed;
+    width: 400px;
+    bottom: 5vh;
+    right: 0;
+    left: 0;
+    margin: auto;
+  }
+  .content {
+    margin-right: 0;
+  }
+  .overview{
+    height: auto;
+  }
+  .overviewTopWrapper{
+    height: var(--height);
+    flex-direction: column;
+  }
+  .profileCardNavBarWrapper {
+    position: static;
+  }
 }
