--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,7 +6,7 @@
   --secondary: #0a0b0f;
   --border: #1f222e;
 
-  --width: 30vw;
+  --width: 26vw;
   --height: 90vh;
 }
 
@@ -32,9 +32,12 @@ body {
 
 /* LAYOUT ------------------------------------- */
 
+.section {
+  margin-bottom: 350px !important;
+}
 .content {
   flex: 1 0 auto;
-  height: 200vh; /* temporary */
+
   margin-right: var(--width);
 }
 
@@ -73,25 +76,22 @@ body {
   grid-row-gap: 20px; */
 
   height: var(--height);
-  margin: 5vh 0;
+  margin: 5vh 0 0;
 }
 .overviewTopWrapper {
   display: flex;
   gap: 20px;
   flex: 1 0 auto;
   margin-bottom: 20px;
-  border: solid blue thin;
 }
 
 .overvieTimeline {
   /* grid-area: 1 / 1 / 2 / 2; */
   flex: 1 0 auto;
-  border: solid red thin;
 }
 .overviewProjects {
   /* grid-area: 1 / 2 / 2 / 3; */
   flex: 1 0 auto;
-  border: solid purple thin;
 }
 .overviewWorkflow {
   /* grid-area: 2 / 1 / 3 / 3; */
@@ -121,10 +121,10 @@ body {
   .content {
     margin-right: 0;
   }
-  .overview{
+  .overview {
     height: auto;
   }
-  .overviewTopWrapper{
+  .overviewTopWrapper {
     height: var(--height);
     flex-direction: column;
   }
